# RAFS

./: README.md
Origins-of-Life/: CMakeLists.txt  README.md
Origins-of-Life/Experimental/: gf.hs
Origins-of-Life/include/: RAF.h  TestCaseProcessor.h
Origins-of-Life/include/Solvers/: RAFSolver1.h
Origins-of-Life/src/Types/: FoodCRS.h  RAFAliases.h  Reaction.h
Origins-of-Life/tests/small/: smallCases.txt  smallTests.cpp
